--- a/General Analysis/letterfonts.tex
+++ b/General Analysis/letterfonts.tex
@@ -1,4 +1,5 @@
 \newcommand{\C}{\mathbb{C}}	
+\renewcommand{\H}{\mathbb{H}}
 \newcommand{\F}{\mathbb{F}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
